# tessera

./: .gitignore  .pre-commit-config.yaml  CLA.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  VOICE.md  batch_tag.py  defaults.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile.h100  Dockerfile.h100.ci  Dockerfile.h100.md
docs/: packaging-self-host.md  support-matrix.md
frontend/: .gitignore  biome.json  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  playwright.marketing.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
packaging/: .gitignore  build_sidecar.sh  sidecar.py  sidecar.spec
pipeline/: aesthetic_head.py  auth.py  bootstrap.py  centroid_tagger.py  database.py  db_base.py  grid.py  ingest.py  license_tokens.py  licensing.py  migrations.py  models.py  nsfw2mini.py  paths.py  preference.py  scene_detect.py  settings.py  suggestions.py  tag_runner.py  tag_schema.py  tagger.py  text_embedder.py  tier0_tagger.py  tier1_embedder.py  tier2_captioner.py  tier3_nudenet.py  ui_prefs.py  video_ingest.py  video_sprites.py  video_thumbnail.py
scripts/: backfill_faces.py  backup_db.sh  caption_sweep.sh  com.gridwork.media-pipeline.plist  com.mediapipeline.caption-sweep.plist  commit_lint.sh  deploy.sh  e2e_serve.sh  export_onnx.py  h100_monitor.sh  import_h100_artifacts.py  ingest_videos.py  issue_license.py  normalize_format.py  normalize_relocate.py  prepare_remote_upload.py  reembed_siglip2.py  remote_pipeline_runner.py  repick_posters.py  serve.sh  (+4 more)
(+336 files in other folders)
